--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -13,14 +13,11 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
-      - name: Install poetry
-        run: pipx install poetry
       - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.python-version }}
-          cache: poetry
       - name: Install Dependencies
-        run: poetry install
+        run: pip install pytest
       - name: Run tests
-        run: poetry run pytest --verbose
+        run: pytest --verbose
